# template-lib-crate

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: main.rs
tests/: a.rs
